--- a/1.2-Stopword-Removal.ipynb
+++ b/1.2-Stopword-Removal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,9 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"The early bird gets the worm. Dr. Strangelove or: How I Learned to Stop Worrying and Love the Bomb. The Earth is 92,960,000mi from the Sun. In Mr. Smith's words, 'This book is great!' The cost is $19.99\\non sale until the end of the year. Michio Kaku, Ph.D. \""
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create text to tokenize\n",
     "\n",
@@ -51,9 +62,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\maxen\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# load the necessary punkt items so we can tokenize\n",
     "\n",
@@ -62,9 +93,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"In Mr. Smith's words, 'This book is great!'\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# tokenize and sample the 4th sentence\n",
     "\n",
@@ -75,9 +117,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['In',\n",
+       " 'Mr.',\n",
+       " 'Smith',\n",
+       " \"'s\",\n",
+       " 'words',\n",
+       " ',',\n",
+       " \"'This\",\n",
+       " 'book',\n",
+       " 'is',\n",
+       " 'great',\n",
+       " '!',\n",
+       " \"'\"]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# let's word tokenize that sentence\n",
     "\n",
@@ -87,9 +151,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\maxen\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# and now install the stopwords items into nltk\n",
     "\n",
@@ -98,9 +182,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i',\n",
+       " 'me',\n",
+       " 'my',\n",
+       " 'myself',\n",
+       " 'we',\n",
+       " 'our',\n",
+       " 'ours',\n",
+       " 'ourselves',\n",
+       " 'you',\n",
+       " \"you're\",\n",
+       " \"you've\",\n",
+       " \"you'll\",\n",
+       " \"you'd\",\n",
+       " 'your',\n",
+       " 'yours',\n",
+       " 'yourself',\n",
+       " 'yourselves',\n",
+       " 'he',\n",
+       " 'him',\n",
+       " 'his',\n",
+       " 'himself',\n",
+       " 'she',\n",
+       " \"she's\",\n",
+       " 'her',\n",
+       " 'hers',\n",
+       " 'herself',\n",
+       " 'it',\n",
+       " \"it's\",\n",
+       " 'its',\n",
+       " 'itself',\n",
+       " 'they',\n",
+       " 'them',\n",
+       " 'their',\n",
+       " 'theirs',\n",
+       " 'themselves',\n",
+       " 'what',\n",
+       " 'which',\n",
+       " 'who',\n",
+       " 'whom',\n",
+       " 'this',\n",
+       " 'that',\n",
+       " \"that'll\",\n",
+       " 'these',\n",
+       " 'those',\n",
+       " 'am',\n",
+       " 'is',\n",
+       " 'are',\n",
+       " 'was',\n",
+       " 'were',\n",
+       " 'be',\n",
+       " 'been',\n",
+       " 'being',\n",
+       " 'have',\n",
+       " 'has',\n",
+       " 'had',\n",
+       " 'having',\n",
+       " 'do',\n",
+       " 'does',\n",
+       " 'did',\n",
+       " 'doing',\n",
+       " 'a',\n",
+       " 'an',\n",
+       " 'the',\n",
+       " 'and',\n",
+       " 'but',\n",
+       " 'if',\n",
+       " 'or',\n",
+       " 'because',\n",
+       " 'as',\n",
+       " 'until',\n",
+       " 'while',\n",
+       " 'of',\n",
+       " 'at',\n",
+       " 'by',\n",
+       " 'for',\n",
+       " 'with',\n",
+       " 'about',\n",
+       " 'against',\n",
+       " 'between',\n",
+       " 'into',\n",
+       " 'through',\n",
+       " 'during',\n",
+       " 'before',\n",
+       " 'after',\n",
+       " 'above',\n",
+       " 'below',\n",
+       " 'to',\n",
+       " 'from',\n",
+       " 'up',\n",
+       " 'down',\n",
+       " 'in',\n",
+       " 'out',\n",
+       " 'on',\n",
+       " 'off',\n",
+       " 'over',\n",
+       " 'under',\n",
+       " 'again',\n",
+       " 'further',\n",
+       " 'then',\n",
+       " 'once',\n",
+       " 'here',\n",
+       " 'there',\n",
+       " 'when',\n",
+       " 'where',\n",
+       " 'why',\n",
+       " 'how',\n",
+       " 'all',\n",
+       " 'any',\n",
+       " 'both',\n",
+       " 'each',\n",
+       " 'few',\n",
+       " 'more',\n",
+       " 'most',\n",
+       " 'other',\n",
+       " 'some',\n",
+       " 'such',\n",
+       " 'no',\n",
+       " 'nor',\n",
+       " 'not',\n",
+       " 'only',\n",
+       " 'own',\n",
+       " 'same',\n",
+       " 'so',\n",
+       " 'than',\n",
+       " 'too',\n",
+       " 'very',\n",
+       " 's',\n",
+       " 't',\n",
+       " 'can',\n",
+       " 'will',\n",
+       " 'just',\n",
+       " 'don',\n",
+       " \"don't\",\n",
+       " 'should',\n",
+       " \"should've\",\n",
+       " 'now',\n",
+       " 'd',\n",
+       " 'll',\n",
+       " 'm',\n",
+       " 'o',\n",
+       " 're',\n",
+       " 've',\n",
+       " 'y',\n",
+       " 'ain',\n",
+       " 'aren',\n",
+       " \"aren't\",\n",
+       " 'couldn',\n",
+       " \"couldn't\",\n",
+       " 'didn',\n",
+       " \"didn't\",\n",
+       " 'doesn',\n",
+       " \"doesn't\",\n",
+       " 'hadn',\n",
+       " \"hadn't\",\n",
+       " 'hasn',\n",
+       " \"hasn't\",\n",
+       " 'haven',\n",
+       " \"haven't\",\n",
+       " 'isn',\n",
+       " \"isn't\",\n",
+       " 'ma',\n",
+       " 'mightn',\n",
+       " \"mightn't\",\n",
+       " 'mustn',\n",
+       " \"mustn't\",\n",
+       " 'needn',\n",
+       " \"needn't\",\n",
+       " 'shan',\n",
+       " \"shan't\",\n",
+       " 'shouldn',\n",
+       " \"shouldn't\",\n",
+       " 'wasn',\n",
+       " \"wasn't\",\n",
+       " 'weren',\n",
+       " \"weren't\",\n",
+       " 'won',\n",
+       " \"won't\",\n",
+       " 'wouldn',\n",
+       " \"wouldn't\"]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# let's check out all the stopwords in english\n",
     "\n",
@@ -110,9 +383,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'ls' n'est pas reconnu en tant que commande interne\n",
+      "ou externe, un programme ex‚cutable ou un fichier de commandes.\n"
+     ]
+    }
+   ],
    "source": [
     "# these are the languages supported for stopwords\n",
     "\n",
@@ -121,9 +403,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['In', 'Mr.', 'Smith', \"'s\", 'words', ',', \"'This\", 'book', 'great', '!', \"'\"]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# remove the stopwords from the list of tokens\n",
     "\n",
@@ -132,9 +425,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['in', 'mr.', 'smith', \"'s\", 'words', \"'this\", 'book', 'is', 'great']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# that didn't work too well because of case, so let's lower case our tokens\n",
     "\n",
@@ -144,9 +448,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mr.', 'smith', \"'s\", 'words', \"'this\", 'book', 'great']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# and now we'll see the stopwords removed\n",
     "\n",
@@ -155,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,9 +483,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mr.', 'smith', \"'s\", 'words', \"'this\", 'book', 'great']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# and give it a try\n",
     "\n",
@@ -179,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,9 +518,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['in', 'mr', 'smith', 's', 'words', 'this', 'book', 'is', 'great']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tokens_punct_removed = remove_punctuation_in_tokens(tokens)\n",
     "tokens_punct_removed"
@@ -202,9 +539,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mr', 'smith', 'words', 'book', 'great']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# and then remove stopwords\n",
     "\n",
@@ -213,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,9 +573,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mr', 'smith', 'words', 'book', 'great']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "preprocess_sentence(sample_sentence)"
    ]
@@ -256,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
