add notebook 1.3 and 1.4

--- a/1.2-Stopword-Removal.ipynb
+++ b/1.2-Stopword-Removal.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# do the needed imports\n",
+    "# import the necessary packages\n",
     "\n",
     "import nltk\n",
     "import string\n",
