--- a/1.1-Tokenization.ipynb
+++ b/1.1-Tokenization.ipynb
@@ -538,22 +538,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "'ls' n'est pas reconnu en tant que commande interne\n",
-      "ou externe, un programme ex‚cutable ou un fichier de commandes.\n"
-     ]
+     "text": "czech.pickle\ndanish.pickle\ndutch.pickle\nenglish.pickle\nestonian.pickle\nfinnish.pickle\nfrench.pickle\ngerman.pickle\ngreek.pickle\nitalian.pickle\nnorwegian.pickle\npolish.pickle\nportuguese.pickle\nPY3\nREADME\nrussian.pickle\nslovene.pickle\nspanish.pickle\nswedish.pickle\nturkish.pickle\n"
     }
    ],
    "source": [
     "# Punkt has support for several languages.  There are each stored in a pickle file\n",
     "\n",
-    "!ls /home/azureuser/nltk_data/tokenizers/punkt"
+    "!dir /B C:\\Users\\maxen\\AppData\\Roaming\\nltk_data\\tokenizers\\punkt"
    ]
   },
   {
@@ -915,7 +912,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.3-final"
   }
  },
  "nbformat": 4,
