--- a/1.2-Stopword-Removal.ipynb
+++ b/1.2-Stopword-Removal.ipynb
@@ -383,22 +383,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "'ls' n'est pas reconnu en tant que commande interne\n",
-      "ou externe, un programme ex‚cutable ou un fichier de commandes.\n"
-     ]
+     "text": "arabic\nazerbaijani\ndanish\ndutch\nenglish\nfinnish\nfrench\ngerman\ngreek\nhungarian\nindonesian\nitalian\nkazakh\nnepali\nnorwegian\nportuguese\nREADME\nromanian\nrussian\nslovene\nspanish\nswedish\ntajik\nturkish\n"
     }
    ],
    "source": [
     "# these are the languages supported for stopwords\n",
     "\n",
-    "!ls /home/azureuser/nltk_data/corpora/stopwords"
+    "!dir /B C:\\Users\\maxen\\AppData\\Roaming\\nltk_data\\corpora\\stopwords"
    ]
   },
   {
@@ -615,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.3-final"
   }
  },
  "nbformat": 4,
